# music-dotnet

./: .gitignore  MidiMinuit.sln  OpenJam.sln  README.md  VGM.sln
ChordEngine/: Note.cs
ChordEngine.DemoBlazor/: ChordEngine.DemoBlazor.csproj  Program.cs
ChordEngine.UnitTests/: ChordEngine.UnitTests.csproj  ChordTests.cs  IntervalTests.cs  NoteTests.cs  PianoKeyTests.cs
DrumPadMachine/: App.xaml  DrumPadMachine.csproj  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest
IntervalCalculator/: App.xaml  IntervalCalculator.csproj  Package.appxmanifest  _scale-100.appx  _scale-400.appx
MidiMinuit.Cli/: MidiMinuit.Cli.csproj  Program.cs
MidiMinuit.CliApp/: MidiMinuit.CliApp.csproj  Program.cs
MidiMinuit.Lib/: Constants.cs  GlobalSuppressions.cs  MidiMinuit.Lib.csproj  MidiMinuit.Lib.csproj.DotSettings  project.json
MidiMinuit.Lib.NETClassic/: MidiMinuit.Lib.NETClassic.csproj
MidiMinuit.Model/: MidiMinuit.Model.csproj  project.json
MidiMinuit.Music/: MidiMinuit.Music.csproj  MidiMinuit.Music.csproj.DotSettings  project.json
MidiMinuit.Music.Tests/: ChordMajorTests.cs  MidiMinuit.Music.Tests.csproj  MusicContextTests.cs  PitchTests.cs
MidiMinuit.Startup/: MidiMinuit.Startup.csproj  Program.cs  Startup.cs  bower.json
MidiMinuit.Tests/: MidiMinuit.Tests.csproj  Package.appxmanifest  UnitTest.cs  UnitTestApp.xaml  UnitTestApp.xaml.cs  project.json
MidiMinuit.UnitTestProject/: ChordMajor_UnitTest.cs  MidiMinuit.UnitTestProject.csproj  MusicContext_UnitTest.cs  UnitTest1.cs  (+1 more)
theory/guitar-audio-synth/: Cargo.toml
theory/guitar-audio-synth/src/: lib.rs
(+1886 files in other folders)
